fix title alignment

--- a/saggardens/mainapp/static/css/style.less
+++ b/saggardens/mainapp/static/css/style.less
@@ -42,6 +42,7 @@ p, h1, h2, h3, h4, h5, h6, a {
     }
   }
   &__title {
+    text-align: center;
     color: @white;
   }
   &__mail {
